syntax = "proto3";

option csharp_namespace = "SilverPE_gRPC.Protos";

service SilverJewelryProtos {
    rpc GetAllJewelry (GetAllJewelryRequest) returns (GetAllJewelryResponse);
}

message GetAllJewelryRequest {}

message SilverJewelry {
    string silver_jewelry_id = 1;
    string silver_jewelry_name = 2;
    string silver_jewelry_description = 3;
    double metal_weight = 4;
    double price = 5;
    int32 production_year = 6;
    string created_date = 7;
    string category_id = 8;
}

message GetAllJewelryResponse {
    repeated SilverJewelry jewelries = 1;
}